2005-08-23  Martin Mares  <mj@ucw.cz>

	* lib/configure: Added x86_64 on Linux.

2005-08-22  Martin Mares  <mj@ucw.cz>

	* lib/filter.c (pci_filter_parse_slot): Fixed parsing of domain filters.
	Thanks to Matthew Wilcox for bug report.

	* lspci.c: Corrected spelling of "Hz" (it was "hz" at several places).
	Thanks to Krzysztof Oledzki for pointing that out.

2004-08-19  Martin Mares  <mj@ucw.cz>

	* pciutils.spec (%attr): Setting attributes for /sbin/* is an anachronism,
	because pciutils by default install to /usr/sbin. Update.

2004-08-13  Martin Mares  <mj@ucw.cz>

	* Released as 2.1.99-test8.

	* lib/types.h, lib/pci.h, lib/sysdep.h: `byte' and `word' are
	no longer exported to the outside world.

	* README.Windows: Updated.

	* maint/release: Substitute version number in win32/config.h.

	* win32/config.h: Added.

	* lib/sysdep.h (bzero, strcasecmp): are macros on Windows.

	* compat/getopt.[ch]: Added copies of getopt.[ch] from the GNU
	C library for use on systems where the default libraries lack
	proper getopt. Currently used by the Windows port.

	* lib/sysdep.h, lib/types.h: Updates of the Windows port from
	Alexander Stock.

	* lib/types.h: If PCI_HAVE_Uxx_TYPES is defined, libpci doesn't define
	its own u8, u16, u32, byte and word types and uses what the user
	has supplied instead. With this change, all namespace clashes should
	be gone.

	* Makefile, lib/Makefile: Updated dependencies.

	* pciutils.h: Include lib/sysdep.h and move NONRET et al. there.

	* lib/sysdep.h: No need to include <sys/types.h> on FreeBSD, because
	it is included unconditionally in lib/types.h.

	* Moved system-dependent stuff from lib/internal.h to lib/sysdep.h,
	which is also used by the utilities. Also moved type declarations
	from lib/pci.h to lib/types.h.

	* All files: Prepend a "PCI_" prefix in front of all configuration
	defines to avoid namespace clashes. CAVEAT: If there is any libpci
	application using the (undocumented) defines, it has to be updated.
