@@ -9,6 +9,8 @@
 
 - update the web page
 
+- unused parameter warnings
+
 PCIIDS:
 - another mirror at Atrey?
 - delete old DB at SF
@@ -20,3 +22,4 @@ MERGES:
 - SuSE: synced
 - MDK: synced
 - Slack: obsolete
+- make path to pci.ids customizable
